--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,35 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Task Manager</title>
+
+    <link rel="stylesheet" href="./reset.css" />
+
+    <style>
+      h1 {
+        font-size: 2em;
+        font-weight: bold;
+      }
+
+      h2 {
+        font-size: 1.5em;
+      }
+
+      h3 {
+        font-size: 1.25em;
+        font-weight: bold;
+      }
+
+      h4 {
+        font-size: 1em;
+        font-weight: bold;
+      }
+
+      h6 {
+        font-size: 0.8em;
+        font-weight: bold;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
